tests/snapshots/examples_fixtures/aoc__2024__Day02Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Day02Solver.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E011]: PRIVATE MEMBER

Cannot access private member `int_at`.

  --> examples/aoc/2024/Day02Solver.flx:24:27
   |
24 |                 push(acc, Shared.int_at(xs, idx) - Shared.int_at(xs, idx + 1)),
   |                           ^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
