tests/snapshots/examples_fixtures/aoc__2024__Day03Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Day03Solver.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/aoc/2024/Day03Solver.flx:59:27
   |
59 |                     Some((Mul(parse_int(left_text), parse_int(right_text)), after_right + 1))
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                           ------------------------------------------------ this expression has type `Int`

   |                           ------------------------------------------------ this type mismatch is reported here

Note:
  expected type: Option<Int>
  found type: Int
  the conflicting types meet at this expression

Help:
  Wrap this value in `Some(...)` or return `None`.
== stdout ==
<not executed>
