tests/snapshots/examples_fixtures/aoc__2024__Day04Solver.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/Day04Solver.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `count`.

  examples/aoc/2024/Day04Solver.flx:37:9
   |
37 |         count([
   |         ^^^^^

Hint:
  Define it first: let count = ...;

Help:
  Did you mean `c`?


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2024/Day04Solver.flx:91:16
   |
91 |             |> filter(/s -> s != "")
   |                ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2024/Day04Solver.flx:147:16
    |
147 |             |> filter(/s -> s != "")
    |                ^^^^^^

Hint:
  Define it first: let filter = ...;

Found 3 errors.
== stdout ==
<not executed>
